--- a/index.html
+++ b/index.html
@@ -35,11 +35,20 @@
     </div>
 
     <form action=".">
+      <label for="focusTime">Focus Time</label>
       <input type="number" value="1" id="focusTime" />
+      <label for="breakTime">Break Time</label>
       <input type="number" value="1" id="breakTime" />
       <button type="submit">Save settings</button>
     </form>
-    <footer>Please Like Share Subscribe 🙏</footer>
+    <footer>
+      Coded by
+      <a
+        href="https://www.youtube.com/channel/UC74BFCI_FbThOjUqx6gmccg"
+        target="_blank"
+        >abhik-b</a
+      >
+    </footer>
 
     <script src="settings.js"></script>
     <script src="timer.js"></script>
