--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Pomodro ⏲ with 🛎</h1>
 
-    <div class="clock">
+    <figure class="clock">
       <div class="mins">0</div>
       <div>:</div>
       <div class="secs">00</div>
@@ -26,7 +26,7 @@
           cy="60"
         />
       </svg>
-    </div>
+    </figure>
 
     <div class="btn-group">
       <button class="start">start focus</button>
